[package]
name = "ckv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1"
crossbeam-skiplist = "0.1"
bytes = "1"
thiserror = "1"
crc32fast = "1"
cuckoofilter = "0.5.0"
bitvec = "1"
parking_lot = "0.12"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
harness = false
name = "ckv"
